trying to fix a bug (collapsed text on Safari)

--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ textarea {
           background-image: linear-gradient(to bottom, #241d7d, #8c88d2);
           color: white;
           height: 683px;
-         z-index:-2}
+          z-index:-2}
 
   .logo {display: flex;
          float: left;
@@ -200,7 +200,7 @@ h3 {font-size: 24px;
     margin-left: auto;
     margin-right: auto;}
 
-.features {position: relative;}
+.features {position: relative; height: 2200px;}
 
 .features:before {transform: skewY(8deg);
                   content: "";
@@ -231,7 +231,7 @@ h3 {font-size: 24px;
 footer        {background-color: #07043b;
                color: white;
                padding-top: 290px;
-               margin-top: -35%;
+               margin-top: -150px;
                position: absolute;
                z-index: -3;}
 
